Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,7 @@ stages:
  
     - task: PublishBuildArtifacts@1
       inputs:
-        PathtoPublish: '$(System.DefaultWorkingDirectory)/next'
+        PathtoPublish: '$(System.DefaultWorkingDirectory)/next-build'
         ArtifactName: 'drop'
         publishLocation: 'Container'
  
