--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,46 +3,37 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
+ 
+ 
 trigger:
 - main
  
 pool:
   vmImage: ubuntu-latest
  
-stages:
+steps:
+- task: NodeTool@0
+  inputs:
+    versionSpec: '20.x'
+  displayName: 'Install Node.js'
  
-- stage: Build
+- script: |
+    npm install
+    npm run build
+  displayName: 'npm install and build'
  
-  jobs:
-  - job: build
-    displayName: Build app
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.BinariesDirectory)'
+    includeRootFolder: true
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
  
-    steps:
-    - task: NodeTool@0
-      inputs: 
-        versionSpec: '20.x'
-      displayName: 'Install Node.js'
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
  
-    - task: Npm@1
-      inputs:
-          command: 'install'
-      displayName: Run npm Install
- 
-    - script: |
-        npm run build
-      displayName: 'npm build'
- 
-    - task: ArchiveFiles@2
-      inputs:
-        rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-        includeRootFolder: true
-        archiveType: 'zip'
-        archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-        replaceExistingArchive: true
- 
-    - task: PublishBuildArtifacts@1
-      inputs:
-        PathtoPublish: '$(System.DefaultWorkingDirectory)/next-build'
-        ArtifactName: 'drop'
-        publishLocation: 'Container'
  
