--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,37 +3,35 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
- 
- 
 trigger:
 - main
- 
+
 pool:
   vmImage: ubuntu-latest
- 
+
 steps:
 - task: NodeTool@0
   inputs:
     versionSpec: '20.x'
   displayName: 'Install Node.js'
- 
+
 - script: |
     npm install
     npm run build
   displayName: 'npm install and build'
- 
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: '$(Build.BinariesDirectory)'
-    includeRootFolder: true
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    replaceExistingArchive: true
- 
+
+- script: |
+    mkdir -p $(Build.ArtifactStagingDirectory)/.next
+    mkdir -p $(Build.ArtifactStagingDirectory)/public
+    cp -r .next/* $(Build.ArtifactStagingDirectory)/.next/
+    cp -r public/* $(Build.ArtifactStagingDirectory)/public/
+    cp package.json $(Build.ArtifactStagingDirectory)/
+    cp next.config.js $(Build.ArtifactStagingDirectory)/
+
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
     publishLocation: 'Container'
- 
- 
+  displayName: 'Publish extracted build files'
+
