--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
     cp -r .next/* $(Build.ArtifactStagingDirectory)/.next/
     cp -r public/* $(Build.ArtifactStagingDirectory)/public/
     cp package.json $(Build.ArtifactStagingDirectory)/
-    cp next.config.js $(Build.ArtifactStagingDirectory)/
+    cp next.config.mjs $(Build.ArtifactStagingDirectory)/
 
 - task: PublishBuildArtifacts@1
   inputs:
